# eliana

./: .gitignore  DEVEL.md  README.md  pyproject.toml  requirements.txt  setup.py
eliana/datasets/: eliana_dataset.py  logparsers.py  parlogs_observations.py
eliana/models/: Strangelog.py
eliana/preprocessing/: __init__.py  log_colorizer.py  tokenizers.py
notebooks/: 01-overview.ipynb  02-datasets.ipynb  03-preprocessing.ipynb  03-preprocessing.log_colorizer.ipynb  03-tokenizers.ipynb  04-models-strangelog.ipynb  04-models.ipynb  04-models.strangelog.ipynb  datasets.ipynb  nb_utils.py
