[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eliana"
version = "0.1.0"
description = "Event Log and Incident Analysis for Astronomy."
requires-python = ">=3.9"
authors = [
    {name = "Juan Pablo Gil", email = "juanpablo.gil@eso.org"}
]
readme = "README.md"  # Make sure you have a README.md file in your project root
license = {text = "BSD 3-Clause License"}
keywords = ["astronomy", "event log", "incident analysis", "log analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "matplotlib",
    "numpy<2",
    "swifter",
    "scikit-learn"
]
urls = { "Homepage" = "https://github.com/paranal-sw/eliana" }

[tool.setuptools]
package-dir = {"" = "eliana"}

[tool.setuptools.packages.find]
where = ["eliana"]